language_tests/outputs/invalid/printf_argument_count_mismatch_literal.out
error: printf format expects 2 argument(s), but 1 provided
 -> language_tests/source_files/invalid/printf_argument_count_mismatch_literal.tr:2:4
	    printf("%d %s", 1)
	    ^^^^^^^^^^^^^^^^^^
